--- a/src/main/resources/com/example/demo/hello.fxml
+++ b/src/main/resources/com/example/demo/hello.fxml
@@ -1,106 +1,159 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="592.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Background_controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="592.0" prefWidth="810.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Background_controller">
    <children>
-      <AnchorPane layoutX="-1.0" layoutY="74.0" prefHeight="518.0" prefWidth="600.0" style="-fx-background-color: #ffebcd;">
+      <AnchorPane layoutY="62.0" prefHeight="531.0" prefWidth="810.0" style="-fx-background-color: #f5f5f5;">
          <children>
-            <TextField fx:id="searchField" alignment="CENTER" layoutX="14.0" prefHeight="48.0" prefWidth="265.0" promptText="Search a word">
+            <TextField fx:id="searchField" alignment="CENTER" layoutX="70.0" layoutY="14.0" prefHeight="48.0" prefWidth="258.0" promptText="Search a word">
                <font>
-                  <Font size="22.0" />
+                  <Font name="High Tower Text" size="22.0" />
                </font>
             </TextField>
-            <ListView fx:id="DictionaryList" layoutX="14.0" layoutY="52.0" prefHeight="450.0" prefWidth="265.0" />
-            <ScrollPane layoutX="314.0" layoutY="58.0" prefHeight="443.0" prefViewportHeight="444.0" prefViewportWidth="265.0" prefWidth="256.0">
-               <content>
-                  <Label fx:id="myLabel" alignment="TOP_LEFT" contentDisplay="TOP" layoutX="15.0" layoutY="6.0" prefHeight="431.0" prefWidth="242.0" style="-fx-background-color: #FFFFFF;">
+            <ListView fx:id="DictionaryList" layoutX="69.0" layoutY="71.0" prefHeight="435.0" prefWidth="323.0" />
+            <AnchorPane layoutX="382.0" layoutY="8.0" prefHeight="505.0" prefWidth="425.0">
+               <children>
+                  <Label fx:id="myLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="25.0" layoutY="4.0" prefHeight="497.0" prefWidth="391.0" style="-fx-background-color: #FFFFFF;">
                      <font>
-                        <Font size="14.0" />
+                        <Font name="High Tower Text" size="36.0" />
                      </font>
                   </Label>
-               </content>
-            </ScrollPane>
-            <Label layoutX="318.0" layoutY="17.0" text="Definition">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Label>
-            <Button fx:id="SoundButton" layoutX="392.0" layoutY="8.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="52.0" stylesheets="@button2.css">
-               <graphic>
-                  <ImageView fitHeight="37.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
+                  <Label layoutX="42.0" layoutY="18.0" prefHeight="26.0" prefWidth="87.0" text="Definition">
+                     <font>
+                        <Font name="High Tower Text" size="19.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="SoundButton" layoutX="129.0" layoutY="9.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="35.0" stylesheets="@button2.css">
+                     <graphic>
+                        <ImageView fitHeight="38.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@image/speaker.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button fx:id="EditButton" layoutX="314.0" layoutY="10.0" mnemonicParsing="false" onAction="#modifyWord" prefHeight="40.0" prefWidth="34.0" stylesheets="@button2.css">
+                     <graphic>
+                        <ImageView fx:id="editView" fitHeight="35.0" fitWidth="35.0" onMouseClicked="#handleImage" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@image/edited.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button fx:id="DeleteButton" layoutX="365.0" layoutY="10.0" mnemonicParsing="false" onAction="#removeWord" prefHeight="40.0" prefWidth="45.0" stylesheets="@button2.css">
+                     <graphic>
+                        <ImageView fitHeight="35.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@image/delete.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Label fx:id="def_label" layoutX="42.0" layoutY="53.0" prefHeight="36.0" prefWidth="258.0">
+                     <font>
+                        <Font name="High Tower Text" size="28.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="75.0" fitWidth="169.0" layoutX="322.0" layoutY="408.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@image/speaker.png" />
+                        <Image url="@image/black-kitten1.png" />
                      </image>
                   </ImageView>
-               </graphic>
-            </Button>
-            <Button fx:id="EditButton" layoutX="458.0" layoutY="8.0" mnemonicParsing="false" onAction="#modifyWord" prefHeight="44.0" prefWidth="52.0" stylesheets="@button2.css">
-               <graphic>
-                  <ImageView fx:id="editView" fitHeight="37.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="97.0" fitWidth="122.0" layoutX="29.0" layoutY="408.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@image/edit.png" />
+                        <Image url="@image/black-kitten3.png" />
                      </image>
                   </ImageView>
-               </graphic></Button>
-            <Button fx:id="DeleteButton" layoutX="516.0" layoutY="8.0" mnemonicParsing="false" onAction="#removeWord" prefHeight="44.0" prefWidth="52.0" stylesheets="@button2.css">
-               <graphic>
-                  <ImageView fitHeight="37.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
+                  <Button layoutX="245.0" layoutY="10.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="41.0" stylesheets="@button2.css">
+                     <graphic>
+                        <ImageView fitHeight="36.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@image/gg%20trans.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+               </children>
+            </AnchorPane>
+            <ImageView fitHeight="75.0" fitWidth="60.0" layoutX="332.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@image/black-kitten2.png" />
+               </image>
+            </ImageView>
+            <AnchorPane prefHeight="531.0" prefWidth="42.0" style="-fx-background-color: #808080;">
+               <children>
+                  <ImageView fitHeight="150.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@image/delete.png" />
+                        <Image url="@image/cat-removebg-preview.png" />
                      </image>
                   </ImageView>
-               </graphic>
-            </Button>
+                  <ImageView fitHeight="53.0" fitWidth="51.0" layoutX="-11.0" layoutY="455.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@image/starred.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="53.0" fitWidth="51.0" layoutX="5.0" layoutY="357.0" pickOnBounds="true" preserveRatio="true" rotate="18.4">
+                     <image>
+                        <Image url="@image/starred.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="53.0" fitWidth="51.0" layoutX="-25.0" layoutY="404.0" pickOnBounds="true" preserveRatio="true" rotate="56.3">
+                     <image>
+                        <Image url="@image/starred.png" />
+                     </image>
+                  </ImageView>
+                  <Button fx:id="addButton" contentDisplay="RIGHT" layoutX="3.0" layoutY="163.0" mnemonicParsing="false" onAction="#addAWord" prefHeight="40.0" prefWidth="51.0" stylesheets="@button1.css" textFill="WHITE">
+                     <font>
+                        <Font name="High Tower Text" size="19.0" />
+                     </font>
+                     <graphic>
+                        <ImageView fx:id="addView" fitHeight="28.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@image/add.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button alignment="CENTER" contentDisplay="RIGHT" layoutX="4.0" layoutY="92.0" mnemonicParsing="false" onAction="#submit" prefHeight="40.0" prefWidth="51.0" stylesheets="@button1.css" textFill="WHITE">
+                     <font>
+                        <Font name="High Tower Text" size="19.0" />
+                     </font>
+                     <graphic>
+                        <ImageView fx:id="searchView" fitHeight="27.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@image/search.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
-      <AnchorPane prefHeight="73.0" prefWidth="600.0" style="-fx-background-color: #808080;">
+      <AnchorPane prefHeight="65.0" prefWidth="810.0" style="-fx-background-color: #808080;">
          <children>
-            <Label layoutX="364.0" layoutY="10.0" text="Meow Team" textFill="WHITE">
+            <Label layoutX="566.0" layoutY="17.0" text="Meow Team" textFill="WHITE">
                <font>
-                  <Font size="31.0" />
+                  <Font name="Berlin Sans FB Demi Bold" size="31.0" />
                </font>
             </Label>
-            <Button alignment="CENTER" contentDisplay="RIGHT" layoutX="14.0" layoutY="31.0" mnemonicParsing="false" onAction="#submit" prefHeight="40.0" prefWidth="114.0" stylesheets="@button1.css" text="Search" textFill="WHITE">
-               <font>
-                  <Font size="19.0" />
-               </font>
-               <graphic>
-                  <ImageView fx:id="searchView" fitHeight="27.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@image/search.png" />
-                     </image>
-                  </ImageView>
-               </graphic></Button>
-            <Button fx:id="addButton" layoutX="157.0" layoutY="33.0" mnemonicParsing="false" onAction="#addAWord" prefHeight="26.0" prefWidth="35.0" stylesheets="@button1.css">
-               <graphic>
-                  <ImageView fx:id="addView" fitHeight="28.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@image/add.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button fx:id="starButton" layoutX="218.0" layoutY="33.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="35.0" style="-fx-background-color: #808080;">
-               <graphic>
-                  <ImageView fx:id="starView" fitHeight="34.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@image/star.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="17.0" layoutY="4.0" prefHeight="26.0" prefWidth="143.0" text="Simple E-V dictionary" textFill="WHITE">
-               <font>
-                  <Font size="13.0" />
-               </font></Label>
-            <ImageView fitHeight="49.0" fitWidth="53.0" layoutX="533.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="46.0" fitWidth="53.0" layoutX="742.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@image/logo.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="51.0" fitWidth="339.0" layoutX="51.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@image/Capture-removebg-preview.png" />
                </image>
             </ImageView>
          </children>
