--- a/src/main/resources/com/example/demo/hello.fxml
+++ b/src/main/resources/com/example/demo/hello.fxml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="592.0" prefWidth="810.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Background_controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="592.0" prefWidth="810.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Background_controller">
    <children>
       <AnchorPane layoutY="62.0" prefHeight="531.0" prefWidth="810.0" style="-fx-background-color: #f5f5f5;">
          <children>
@@ -31,7 +27,7 @@
                         <Font name="High Tower Text" size="19.0" />
                      </font>
                   </Label>
-                  <Button fx:id="SoundButton" layoutX="129.0" layoutY="9.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="35.0" stylesheets="@button2.css">
+                  <Button fx:id="SoundButton" layoutX="129.0" layoutY="9.0" mnemonicParsing="false" onAction="#speak" prefHeight="41.0" prefWidth="35.0" stylesheets="@button2.css">
                      <graphic>
                         <ImageView fitHeight="38.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -42,7 +38,7 @@
                   </Button>
                   <Button fx:id="EditButton" layoutX="314.0" layoutY="10.0" mnemonicParsing="false" onAction="#modifyWord" prefHeight="40.0" prefWidth="34.0" stylesheets="@button2.css">
                      <graphic>
-                        <ImageView fx:id="editView" fitHeight="35.0" fitWidth="35.0" onMouseClicked="#handleImage" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="editView" fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@image/edited.png" />
                            </image>
@@ -73,11 +69,11 @@
                         <Image url="@image/black-kitten3.png" />
                      </image>
                   </ImageView>
-                  <Button layoutX="245.0" layoutY="10.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="41.0" stylesheets="@button2.css">
+                  <Button layoutX="245.0" layoutY="10.0" mnemonicParsing="false" onAction="#ggTranslate" prefHeight="26.0" prefWidth="41.0" stylesheets="@button2.css">
                      <graphic>
                         <ImageView fitHeight="36.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@image/gg%20trans.png" />
+                              <Image url="@image/ggtrans.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -123,7 +119,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button alignment="CENTER" contentDisplay="RIGHT" layoutX="4.0" layoutY="92.0" mnemonicParsing="false" onAction="#submit" prefHeight="40.0" prefWidth="51.0" stylesheets="@button1.css" textFill="WHITE">
+                  <Button alignment="CENTER" contentDisplay="RIGHT" layoutX="4.0" layoutY="92.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="51.0" stylesheets="@button1.css" textFill="WHITE">
                      <font>
                         <Font name="High Tower Text" size="19.0" />
                      </font>
