--- a/src/main/resources/com/example/demo/hello.fxml
+++ b/src/main/resources/com/example/demo/hello.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="592.0" prefWidth="810.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Background_controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="592.0" prefWidth="810.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Background_controller">
    <children>
       <AnchorPane layoutY="62.0" prefHeight="531.0" prefWidth="810.0" style="-fx-background-color: #f5f5f5;">
          <children>
@@ -17,7 +21,7 @@
             <ListView fx:id="DictionaryList" layoutX="69.0" layoutY="71.0" prefHeight="435.0" prefWidth="323.0" />
             <AnchorPane layoutX="382.0" layoutY="8.0" prefHeight="505.0" prefWidth="425.0">
                <children>
-                  <Label fx:id="myLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="25.0" layoutY="4.0" prefHeight="497.0" prefWidth="391.0" style="-fx-background-color: #FFFFFF;">
+                  <Label fx:id="myLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="29.0" layoutY="4.0" prefHeight="497.0" prefWidth="391.0" style="-fx-background-color: #FFFFFF;">
                      <font>
                         <Font name="High Tower Text" size="36.0" />
                      </font>
