--- a/src/main/resources/com/example/demo/hello.fxml
+++ b/src/main/resources/com/example/demo/hello.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -9,7 +15,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="592.0" prefWidth="810.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Background_controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="592.0" prefWidth="810.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Background_controller">
    <children>
       <AnchorPane layoutY="62.0" prefHeight="531.0" prefWidth="810.0" style="-fx-background-color: #f5f5f5;">
          <children>
@@ -21,11 +27,20 @@
             <ListView fx:id="DictionaryList" layoutX="69.0" layoutY="71.0" prefHeight="435.0" prefWidth="323.0" />
             <AnchorPane layoutX="382.0" layoutY="8.0" prefHeight="505.0" prefWidth="425.0">
                <children>
-                  <Label fx:id="myLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="29.0" layoutY="4.0" prefHeight="497.0" prefWidth="391.0" style="-fx-background-color: #FFFFFF;">
+                  <TextArea fx:id="meaningArea" editable="false" layoutX="18.0" layoutY="7.0" prefHeight="492.0" prefWidth="407.0" stylesheets="@meaningArea.css" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="18.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="7.0">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <padding>
+                        <Insets bottom="50.0" left="10.0" right="10.0" top="110.0" />
+                     </padding>
                      <font>
-                        <Font name="High Tower Text" size="36.0" />
+                        <Font size="20.0" />
                      </font>
-                  </Label>
+                  </TextArea>
                   <Label layoutX="42.0" layoutY="18.0" prefHeight="26.0" prefWidth="87.0" text="Definition">
                      <font>
                         <Font name="High Tower Text" size="19.0" />
@@ -58,7 +73,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Label fx:id="def_label" layoutX="42.0" layoutY="53.0" prefHeight="36.0" prefWidth="258.0">
+                  <Label fx:id="def_label" layoutX="42.0" layoutY="58.0" prefHeight="40.0" prefWidth="312.0">
                      <font>
                         <Font name="High Tower Text" size="28.0" />
                      </font>
