--- a/src/main/resources/com/example/demo/hello.fxml
+++ b/src/main/resources/com/example/demo/hello.fxml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="592.0" prefWidth="810.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Background_controller">
    <children>
@@ -27,7 +19,7 @@
             <ListView fx:id="DictionaryList" layoutX="69.0" layoutY="71.0" prefHeight="435.0" prefWidth="323.0" />
             <AnchorPane layoutX="382.0" layoutY="8.0" prefHeight="505.0" prefWidth="425.0">
                <children>
-                  <TextArea fx:id="meaningArea" editable="false" layoutX="18.0" layoutY="7.0" prefHeight="492.0" prefWidth="407.0" stylesheets="@meaningArea.css" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="18.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="7.0">
+                  <TextArea fx:id="meaningArea" editable="false" layoutX="18.0" layoutY="7.0" prefHeight="492.0" prefWidth="407.0" stylesheets="@style/meaningArea.css" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="18.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="7.0">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -46,7 +38,7 @@
                         <Font name="High Tower Text" size="19.0" />
                      </font>
                   </Label>
-                  <Button fx:id="SoundButton" layoutX="129.0" layoutY="9.0" mnemonicParsing="false" onAction="#speak" prefHeight="41.0" prefWidth="35.0" stylesheets="@button2.css">
+                  <Button layoutX="129.0" layoutY="9.0" mnemonicParsing="false" onAction="#speak" prefHeight="41.0" prefWidth="35.0" stylesheets="@style/button2.css">
                      <graphic>
                         <ImageView fitHeight="38.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -55,16 +47,16 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="EditButton" layoutX="314.0" layoutY="10.0" mnemonicParsing="false" onAction="#modifyWord" prefHeight="40.0" prefWidth="34.0" stylesheets="@button2.css">
+                  <Button layoutX="314.0" layoutY="10.0" mnemonicParsing="false" onAction="#modifyWord" prefHeight="40.0" prefWidth="34.0" stylesheets="@style/button2.css">
                      <graphic>
-                        <ImageView fx:id="editView" fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@image/edited.png" />
                            </image>
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="DeleteButton" layoutX="365.0" layoutY="10.0" mnemonicParsing="false" onAction="#removeWord" prefHeight="40.0" prefWidth="45.0" stylesheets="@button2.css">
+                  <Button layoutX="365.0" layoutY="10.0" mnemonicParsing="false" onAction="#removeWord" prefHeight="40.0" prefWidth="45.0" stylesheets="@style/button2.css">
                      <graphic>
                         <ImageView fitHeight="35.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -78,17 +70,17 @@
                         <Font name="High Tower Text" size="28.0" />
                      </font>
                   </Label>
-                  <ImageView fitHeight="75.0" fitWidth="169.0" layoutX="322.0" layoutY="408.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="64.0" fitWidth="80.0" layoutX="336.0" layoutY="446.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@image/black-kitten1.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="97.0" fitWidth="122.0" layoutX="29.0" layoutY="408.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="75.0" fitWidth="98.0" layoutX="18.0" layoutY="446.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@image/black-kitten3.png" />
                      </image>
                   </ImageView>
-                  <Button layoutX="245.0" layoutY="10.0" mnemonicParsing="false" onAction="#ggTranslate" prefHeight="26.0" prefWidth="41.0" stylesheets="@button2.css">
+                  <Button layoutX="245.0" layoutY="10.0" mnemonicParsing="false" onAction="#ggTranslate" prefHeight="26.0" prefWidth="41.0" stylesheets="@style/button2.css">
                      <graphic>
                         <ImageView fitHeight="36.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -126,24 +118,24 @@
                         <Image url="@image/starred.png" />
                      </image>
                   </ImageView>
-                  <Button fx:id="addButton" contentDisplay="RIGHT" layoutX="3.0" layoutY="163.0" mnemonicParsing="false" onAction="#addAWord" prefHeight="40.0" prefWidth="51.0" stylesheets="@button1.css" textFill="WHITE">
+                  <Button contentDisplay="RIGHT" layoutX="3.0" layoutY="163.0" mnemonicParsing="false" onAction="#addAWord" prefHeight="40.0" prefWidth="51.0" stylesheets="@style/button1.css" textFill="WHITE">
                      <font>
                         <Font name="High Tower Text" size="19.0" />
                      </font>
                      <graphic>
-                        <ImageView fx:id="addView" fitHeight="28.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="28.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@image/add.png" />
                            </image>
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button alignment="CENTER" contentDisplay="RIGHT" layoutX="4.0" layoutY="92.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="51.0" stylesheets="@button1.css" textFill="WHITE">
+                  <Button alignment="CENTER" contentDisplay="RIGHT" layoutX="4.0" layoutY="92.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="51.0" stylesheets="@style/button1.css" textFill="WHITE">
                      <font>
                         <Font name="High Tower Text" size="19.0" />
                      </font>
                      <graphic>
-                        <ImageView fx:id="searchView" fitHeight="27.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="27.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@image/search.png" />
                            </image>
