--- a/src/main/resources/com/example/demo/style/meaningArea.css
+++ b/src/main/resources/com/example/demo/style/meaningArea.css
@@ -26,13 +26,6 @@
     -fx-background-radius: 2em;
 }
 
-.scroll-bar:horizontal {
-    -fx-pref-height: 12;
-    -fx-background-color: transparent;
-    -fx-background-radius: 2em;
-}
-
-.scroll-bar:horizontal .track,
 .scroll-bar:vertical .track{
     -fx-background-color :transparent;
     -fx-border-color :transparent;
@@ -40,18 +33,9 @@
 }
 
 .scroll-bar:vertical .increment-arrow,
-.scroll-bar:vertical .decrement-arrow,
-.scroll-bar:horizontal .increment-arrow,
-.scroll-bar:horizontal .decrement-arrow{
+.scroll-bar:vertical .decrement-arrow{
     -fx-shape: "";
     -fx-padding:0;
-}
-
-.scroll-bar:horizontal .increment-button ,
-.scroll-bar:horizontal .decrement-button {
-    -fx-background-color :transparent;
-    -fx-background-radius : 0.0em;
-    -fx-padding :0.0 0.0 10.0 0.0;
 }
 
 .scroll-bar:vertical .increment-button ,
